# json-api-practice

./: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
