[package]
edition = "2018"
name = "json-api-practice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
http = "0.2"
hyper = {version = "0.14", features = ["full"]}
lazy_static = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
